[package]
name = "bracket"
version = "0.1.0"
description = "Fast and robust handlebars-compatible template engine"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
repository = "https://github.com/uwe-app/bracket"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
logos = "0.11.4"
log = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
unicode-width = "^0.1"

[dev-dependencies]
pretty_env_logger = "0.4"
