[package]
name = "bracket"
version = "0.6.9"
description = "Fast and correct handlebars-compatible template engine"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
repository = "https://github.com/uwe-app/bracket"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
thiserror = "^1.0"
logos = "0.11.4"
log = { version = "^0.4", optional = true }
serde = "^1.0"
serde_json = "^1.0"
unicode-width = "^0.1"
dyn-clone = "^1.0"

[dev-dependencies]
pretty_env_logger = "0.4"

[features]
default = ["helpers", "fs", "links"]
helpers = [
  "log-helper",
  "json-helper",
  "logical-helper",
  "lookup-helper",
  "each-helper",
  "with-helper",
  "conditional-helper",
  "comparison-helper",
]
log-helper = ["log"]
json-helper = []
logical-helper = []
lookup-helper = []
each-helper = []
with-helper = []
conditional-helper = []
comparison-helper = []
#stream = []
fs = []
links = []

[package.metadata.docs.rs]
all-features = true
